# SimpleGrad

./: .gitignore  README.md  chatgpt-advice.txt  demo.ipynb  maths.ipynb  output.stats  pyproject.toml  run.py
demos/: mnist.ipynb
dev/: nb1.ipynb
misc/: params.txt
simplegrad/: __init__.py  engine.py  evals.py  mnist_loader.py  network.py  nn.py  parameter.py  run.py  tensor.py  train.py
simplegrad/dataloaders/: mnist_loader.py
simplegrad/utils/: mnist_loader.py
