[project]
name = "simplegrad"
version = "0.1.0"
description = "A simple and lightweight autograd implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scikit-learn>=1.6.1",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
